--- a/lesson4/tabs/index.html
+++ b/lesson4/tabs/index.html
@@ -39,7 +39,7 @@
         illo impedit minus molestias nulla, voluptatibus?</p>
 </div>
 
-<script src="jquery-3.3.1.min.js"></script>
+<script src="../jquery-3.3.1.min.js"></script>
 <script>
     $(document).ready(() => {
         let $header = $('.header-list');
