--- a/lesson4/feedback form/validator.html
+++ b/lesson4/feedback form/validator.html
@@ -60,8 +60,8 @@
         <label>
             Your city <br>
             <select name="town" id="town">
-                <option>Пункт 1</option>
-                <option>Пункт 2</option>
+                <!--<option>Пункт 1</option>-->
+                <!--<option>Пункт 2</option>-->
             </select>
         </label>
     </div>
@@ -76,9 +76,26 @@
             if (!valid.valid){
                 e.preventDefault();
             }
-        })
+        });
+
+        // AJAX
+        let $ajaxBlock = $('#town');
+        $.ajax({
+            url: 'towns.json',
+            type: 'GET',
+            dataType: 'json',
+            success: data => {
+                for (let town of data) {
+                    let $town = $(`<option>${town.name}</option>`);
+                    $ajaxBlock.append($town);
+                }
+            },
+            error: error => {
+                console.log(error);
+            },
+        });
     })
-    
+
 </script>
 
 </body>
