tabs html/css finished

--- a/lesson4/tabs/index.html
+++ b/lesson4/tabs/index.html
@@ -8,102 +8,120 @@
 <body>
 <div class="wrapper">
     <ul class="tab-wrap">
-        <li><a href="#one" class="tab active"></a>Вкладка 1</li>
-        <li><a href="#two" class="tab"></a>Вкладка 2</li>
-        <li><a href="#three" class="tab"></a>Вкладка 3</li>
-        <li><a href="#four" class="tab"></a>Вкладка 4</li>
+        <li><a href="#one" class="tab active">Вкладка 1</a></li>
+        <li><a href="#two" class="tab">Вкладка 2</a></li>
+        <li><a href="#three" class="tab">Вкладка 3</a></li>
+        <li><a href="#four" class="tab">Вкладка 4</a></li>
     </ul>
-    <div class="text-content">
-        <div id="one" class="itemContent show">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus
-            architecto, asperiores cupiditate debitis
-            fuga, ipsum molestias mollitia perferendis placeat quas repellendus soluta voluptates? Modi neque pariatur
-            reprehenderit voluptas? Amet architecto at aut cum cumque doloribus ea eaque eius eveniet expedita harum
-            illum
-            impedit incidunt, itaque iure labore minima nulla obcaecati omnis optio, perspiciatis rem sapiente sequi
-            suscipit tempora ullam voluptas. Cupiditate, numquam quod. Consequuntur corporis culpa, expedita illo iure
-            maiores maxime nihil, porro quibusdam repudiandae, sapiente suscipit! Accusantium possimus, qui? Ad amet
-            labore
-            laudantium magnam nostrum, quidem repellendus. Fuga molestiae quasi quidem reprehenderit temporibus.
-            Excepturi
-            ipsum modi quidem voluptas voluptates.
-        </div>
-        <div id="two" class="itemContent hide">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet
-            asperiores commodi culpa est excepturi
-            fuga harum id illo ipsam iste maxime nisi nostrum, odit officiis perspiciatis possimus provident quidem, quo
-            repellat reprehenderit sapiente sint, velit. At aut corporis culpa, distinctio dolore dolorem ea enim,
-            eveniet
-            illum iste sapiente voluptas!
-        </div>
-        <div id="three" class="itemContent hide">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aperiam
-            beatae commodi consectetur, cum deserunt
-            doloremque dolores error eum fuga harum, iste laborum natus officia quasi quis repellendus repudiandae
-            saepe,
-            temporibus voluptas? Esse in incidunt sapiente sequi soluta. Ab aliquid aspernatur, beatae consectetur
-            corporis
-            culpa doloremque doloribus ducimus earum enim excepturi expedita fuga hic, id illo illum impedit inventore
-            ipsam
-            iure iusto laudantium maxime necessitatibus nemo nobis, numquam obcaecati odio pariatur perferendis
-            perspiciatis
-            possimus quaerat quis reprehenderit rerum sapiente soluta voluptate voluptatum? Alias architecto aut
-            blanditiis
-            commodi consequatur dolor dolore, ducimus et, explicabo facere fugiat harum hic, id inventore ipsa ipsam
-            laborum
-            libero magni modi nobis nostrum numquam obcaecati odio quibusdam quis sed vero. Consequatur illo inventore
-            nihil
-            quam qui totam ullam vel! A ad, aperiam aut beatae, cumque cupiditate debitis deleniti eaque earum enim est
-            et
-            eum, illo iusto molestias mollitia nihil nostrum nulla obcaecati officiis quod repellat repellendus?
-        </div>
-        <div id="four" class="itemContent hide">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
-            adipisci dignissimos distinctio dolor error
-            illo impedit minus molestias nulla, voluptatibus?
-        </div>
+    <div id="one" class="itemContent active">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus
+        architecto, asperiores cupiditate debitis
+        fuga, ipsum molestias mollitia perferendis placeat quas repellendus soluta voluptates? Modi neque pariatur
+        reprehenderit voluptas? Amet architecto at aut cum cumque doloribus ea eaque eius eveniet expedita harum
+        illum
+        impedit incidunt, itaque iure labore minima nulla obcaecati omnis optio, perspiciatis rem sapiente sequi
+        suscipit tempora ullam voluptas. Cupiditate, numquam quod. Consequuntur corporis culpa, expedita illo iure
+        maiores maxime nihil, porro quibusdam repudiandae, sapiente suscipit! Accusantium possimus, qui? Ad amet
+        labore
+        laudantium magnam nostrum, quidem repellendus. Fuga molestiae quasi quidem reprehenderit temporibus.
+        Excepturi
+        ipsum modi quidem voluptas voluptates.
     </div>
-    <div class="text-content">
-        <div id="one1" class="itemContent show">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus
-            architecto, asperiores cupiditate debitis
-            fuga, ipsum molestias mollitia perferendis placeat quas repellendus soluta voluptates? Modi neque pariatur
-            reprehenderit voluptas? Amet architecto at aut cum cumque doloribus ea eaque eius eveniet expedita harum
-            illum
-            impedit incidunt, itaque iure labore minima nulla obcaecati omnis optio, perspiciatis rem sapiente sequi
-            suscipit tempora ullam voluptas. Cupiditate, numquam quod. Consequuntur corporis culpa, expedita illo iure
-            maiores maxime nihil, porro quibusdam repudiandae, sapiente suscipit! Accusantium possimus, qui? Ad amet
-            labore
-            laudantium magnam nostrum, quidem repellendus. Fuga molestiae quasi quidem reprehenderit temporibus.
-            Excepturi
-            ipsum modi quidem voluptas voluptates.
-        </div>
-        <div id="two1" class="itemContent hide">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet
-            asperiores commodi culpa est excepturi
-            fuga harum id illo ipsam iste maxime nisi nostrum, odit officiis perspiciatis possimus provident quidem, quo
-            repellat reprehenderit sapiente sint, velit. At aut corporis culpa, distinctio dolore dolorem ea enim,
-            eveniet
-            illum iste sapiente voluptas!
-        </div>
-        <div id="three1" class="itemContent hide">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aperiam
-            beatae commodi consectetur, cum deserunt
-            doloremque dolores error eum fuga harum, iste laborum natus officia quasi quis repellendus repudiandae
-            saepe,
-            temporibus voluptas? Esse in incidunt sapiente sequi soluta. Ab aliquid aspernatur, beatae consectetur
-            corporis
-            culpa doloremque doloribus ducimus earum enim excepturi expedita fuga hic, id illo illum impedit inventore
-            ipsam
-            iure iusto laudantium maxime necessitatibus nemo nobis, numquam obcaecati odio pariatur perferendis
-            perspiciatis
-            possimus quaerat quis reprehenderit rerum sapiente soluta voluptate voluptatum? Alias architecto aut
-            blanditiis
-            commodi consequatur dolor dolore, ducimus et, explicabo facere fugiat harum hic, id inventore ipsa ipsam
-            laborum
-            libero magni modi nobis nostrum numquam obcaecati odio quibusdam quis sed vero. Consequatur illo inventore
-            nihil
-            quam qui totam ullam vel! A ad, aperiam aut beatae, cumque cupiditate debitis deleniti eaque earum enim est
-            et
-            eum, illo iusto molestias mollitia nihil nostrum nulla obcaecati officiis quod repellat repellendus?
-        </div>
-        <div id="four1" class="itemContent hide">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium
-            adipisci dignissimos distinctio dolor error
-            illo impedit minus molestias nulla, voluptatibus?
-        </div>
+    <div id="two" class="itemContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet
+        asperiores commodi culpa est excepturi
+        fuga harum id illo ipsam iste maxime nisi nostrum, odit officiis perspiciatis possimus provident quidem, quo
+        repellat reprehenderit sapiente sint, velit. At aut corporis culpa, distinctio dolore dolorem ea enim,
+        eveniet
+        illum iste sapiente voluptas!
+    </div>
+    <div id="three" class="itemContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aperiam
+        beatae commodi consectetur, cum deserunt
+        doloremque dolores error eum fuga harum, iste laborum natus officia quasi quis repellendus repudiandae
+        saepe,
+        temporibus voluptas? Esse in incidunt sapiente sequi soluta. Ab aliquid aspernatur, beatae consectetur
+        corporis
+        culpa doloremque doloribus ducimus earum enim excepturi expedita fuga hic, id illo illum impedit inventore
+        ipsam
+        iure iusto laudantium maxime necessitatibus nemo nobis, numquam obcaecati odio pariatur perferendis
+        perspiciatis
+        possimus quaerat quis reprehenderit rerum sapiente soluta voluptate voluptatum? Alias architecto aut
+        blanditiis
+        commodi consequatur dolor dolore, ducimus et, explicabo facere fugiat harum hic, id inventore ipsa ipsam
+        laborum
+        libero magni modi nobis nostrum numquam obcaecati odio quibusdam quis sed vero. Consequatur illo inventore
+        nihil
+        quam qui totam ullam vel! A ad, aperiam aut beatae, cumque cupiditate debitis deleniti eaque earum enim est
+        et
+        eum, illo iusto molestias mollitia nihil nostrum nulla obcaecati officiis quod repellat repellendus?
+    </div>
+    <div id="four" class="itemContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur
+        corporis eligendi laboriosam obcaecati quisquam tempora voluptatem. Aliquam architecto dicta facere harum.
+        Cumque doloribus harum iste laudantium soluta? Amet aperiam, at atque eligendi fugit in labore, minus
+        nesciunt nisi pariatur quo temporibus. Debitis laudantium, nihil! Assumenda distinctio eaque enim est
+        nesciunt. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur
+        corporis eligendi laboriosam obcaecati quisquam tempora voluptatem. Aliquam architecto dicta facere harum.
+        Cumque doloribus harum iste laudantium soluta? Amet aperiam, at atque eligendi fugit in labore, minus
+        nesciunt nisi pariatur quo temporibus. Debitis laudantium, nihil! Assumenda distinctio eaque enim est
+        nesciunt.
+    </div>
+</div>
+<div class="wrapper vertical-wrap">
+    <ul class="tab-wrap vertical">
+        <li><a href="#one1" class="tab active">Вкладка 1</a></li>
+        <li><a href="#two1" class="tab">Вкладка 2</a></li>
+        <li><a href="#three1" class="tab">Вкладка 3</a></li>
+        <li><a href="#four1" class="tab">Вкладка 4</a></li>
+    </ul>
+    <div id="one1" class="itemContent active">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus
+        architecto, asperiores cupiditate debitis
+        fuga, ipsum molestias mollitia perferendis placeat quas repellendus soluta voluptates? Modi neque pariatur
+        reprehenderit voluptas? Amet architecto at aut cum cumque doloribus ea eaque eius eveniet expedita harum
+        illum
+        impedit incidunt, itaque iure labore minima nulla obcaecati omnis optio, perspiciatis rem sapiente sequi
+        suscipit tempora ullam voluptas. Cupiditate, numquam quod. Consequuntur corporis culpa, expedita illo iure
+        maiores maxime nihil, porro quibusdam repudiandae, sapiente suscipit! Accusantium possimus, qui? Ad amet
+        labore
+        laudantium magnam nostrum, quidem repellendus. Fuga molestiae quasi quidem reprehenderit temporibus.
+        Excepturi
+        ipsum modi quidem voluptas voluptates.
+    </div>
+    <div id="two1" class="itemContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet
+        asperiores commodi culpa est excepturi
+        fuga harum id illo ipsam iste maxime nisi nostrum, odit officiis perspiciatis possimus provident quidem, quo
+        repellat reprehenderit sapiente sint, velit. At aut corporis culpa, distinctio dolore dolorem ea enim,
+        eveniet
+        illum iste sapiente voluptas!
+    </div>
+    <div id="three1" class="itemContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aperiam
+        beatae commodi consectetur, cum deserunt
+        doloremque dolores error eum fuga harum, iste laborum natus officia quasi quis repellendus repudiandae
+        saepe,
+        temporibus voluptas? Esse in incidunt sapiente sequi soluta. Ab aliquid aspernatur, beatae consectetur
+        corporis
+        culpa doloremque doloribus ducimus earum enim excepturi expedita fuga hic, id illo illum impedit inventore
+        ipsam
+        iure iusto laudantium maxime necessitatibus nemo nobis, numquam obcaecati odio pariatur perferendis
+        perspiciatis
+        possimus quaerat quis reprehenderit rerum sapiente soluta voluptate voluptatum? Alias architecto aut
+        blanditiis
+        commodi consequatur dolor dolore, ducimus et, explicabo facere fugiat harum hic, id inventore ipsa ipsam
+        laborum
+        libero magni modi nobis nostrum numquam obcaecati odio quibusdam quis sed vero. Consequatur illo inventore
+        nihil
+        quam qui totam ullam vel! A ad, aperiam aut beatae, cumque cupiditate debitis deleniti eaque earum enim est
+        et
+        eum, illo iusto molestias mollitia nihil nostrum nulla obcaecati officiis quod repellat repellendus?
+    </div>
+    <div id="four1" class="itemContent">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut cupiditate ducimus
+        ipsum modi mollitia nostrum, numquam quasi quia, quisquam quos similique voluptatum? Aliquam animi architecto
+        aspernatur cumque dolores est eveniet fuga, odio officiis pariatur provident quia quidem quisquam quod soluta
+        sunt voluptate. Accusantium dignissimos dolorum expedita labore laudantium libero maxime necessitatibus quasi
+        quibusdam similique? A accusamus debitis deleniti dignissimos, distinctio doloremque dolorum exercitationem
+        fugiat hic illum iure laboriosam laudantium minus nam nihil pariatur perferendis possimus, quaerat quia ratione
+        soluta veritatis voluptate? Cum cupiditate ex harum iusto quod rerum, sed soluta suscipit tempora. Alias, cum
+        dignissimos dolor dolore ducimus eius eligendi eos error est facilis hic laboriosam maxime minima nam natus nemo
+        neque numquam obcaecati placeat possimus quas qui quibusdam quisquam sed sint tempora vero voluptate. Asperiores
+        aspernatur eius ex nulla praesentium quidem sint sunt! Animi atque dolores doloribus ex facilis, ipsa natus,
+        necessitatibus nulla, odit officia quae quam qui sint!
     </div>
 </div>
 <script src="../jquery-3.3.1.min.js"></script>
