--- a/lesson4/feedback form/validator.html
+++ b/lesson4/feedback form/validator.html
@@ -97,7 +97,7 @@
         //     },
         // });
 
-        fetch('towns.json')
+        fetch('russian-cities.json')
             .then(result => result.json())
             .then(data => {
                 for (let town of data) {
