--- a/lesson4/feedback form/cities.html
+++ b/lesson4/feedback form/cities.html
@@ -30,22 +30,53 @@
     </style>
 </head>
 <body>
-<select name="city" id="city"></select>
-<!--<div class="wrap">-->
-    <!--<input type="text" name="city" id="city">-->
-<!--</div>-->
+<!--<select name="city" id="city"></select>-->
+<div class="wrap">
+    <input type="text" name="city" id="city">
+</div>
 <script src="../jquery-3.3.1.min.js"></script>
 <script>
     $(document).ready(() => {
+
+        // Task 2
         let list = 'russian-cities.json';
+        // fetch(list)
+        //     .then(result => result.json())
+        //     .then(data => {
+        //         let $select = $('#city');
+        //         for (let city of data) {
+        //             $select.append($(`<option value="${city.name}">${city.name}</option>`));
+        //         }
+        //     });
+
+        // Task 3 (js)
+
         fetch(list)
             .then(result => result.json())
             .then(data => {
-               let $select = $('#city');
-               for (let city of data) {
-                   $select.append($(`<option value="${city.name}">${city.name}</option>`));
-               }
+                let $select = $('#city');
+                $select.keyup(() => {
+                    $('.list').remove();
+                    if ($select.val().length > 2) {
+                        let $block = $('<div/>', {
+                            class: 'list'
+                        });
+                        let search = RegExp($select.val(), 'i');
+                        for (let city of data) {
+                            if (search.test(city.name)) {
+                                $block.append($(`<p class="city">${city.name}</p>`));
+                            }
+                        }
+                        $block.appendTo($('.wrap'));
+                        $block.on('click', 'p', event => {
+                            $select.val(event.target.textContent);
+                            $('.list').remove();
+                        })
+                    }
+                });
             });
+
+
     });
 </script>
 </body>
