--- a/lesson5/hw5/index.html
+++ b/lesson5/hw5/index.html
@@ -124,12 +124,10 @@
 <hr>
 <div id="products"></div>
 <form action="" id="myform">
-    <label>
-        Ваше имя
+    <label> Ваше имя
         <input type="text" id="author">
     </label>
-    <label>
-        Ваш отзыв
+    <label> Ваш отзыв
         <textarea id="text" rows="10"></textarea>
     </label>
     <button type="submit">Добавить отзыв</button>
